# actuation_module

./: Author.md  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  package.xml  package.xml~
config/: dc_motor_vel.yaml  servo.yaml  servo.yaml~
config/dc_motor_1/: config.yaml  position.yaml  tf.yaml  velocity.yaml
include/actuation_module/: PID.hpp  beaglebone_dc_motor_controller.h  dc_motor_controller.h  dc_motor_controller.h~  position_controller.h  position_controller.h~  velocity_controller.h  velocity_controller.h~
launch/: actuation.launch
scripts/: module-boot.conf  module.bash
src/: beaglebone_dc_motor_controller.cpp  beaglebone_dc_motor_controller.cpp.save  beaglebone_dc_motor_tf.cpp  dc_motor_controller.cpp  dc_motor_controller.cpp~  motor_controller.cpp~  position_controller.cpp  position_controller.cpp~  velocity_controller.cpp  velocity_controller.cpp~
src/actuation_module/: PID.cpp
