<?xml version="1.0"?>
<package>
  <name>actuation_module</name>
  <version>0.0.0</version>
  <description>The actuation_module package used on the oddbot platform developed at CMU in the MRSD program</description>
  <maintainer email="cmdunkers@cmu.edu">Chris Dunkers</maintainer>
  <license>BSD</license>
  <author email="cmdunkers@cmu.edu">Chris Dunkers</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>oddbot_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>beaglebone_eqep</build_depend>
  <build_depend>beaglebone_blacklib</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>oddbot_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>beaglebone_eqep</run_depend>
  <run_depend>beaglebone_blacklib</run_depend>
  <run_depend>tf</run_depend>
</package>
